fixed overflow behavior on right panel

--- a/src/components/tasks-board/TaskBoard.module.scss
+++ b/src/components/tasks-board/TaskBoard.module.scss
@@ -7,11 +7,11 @@
   align-items: flex-start;
   justify-content: center;
   padding-top: 30px;
-  height: 100%;
 }
 
 .taskColumns {
   margin-top: 36px;
+  overflow-y: auto;
 }
 
 .emptyIconWrapper {
