--- a/src/pages/home/Home.module.scss
+++ b/src/pages/home/Home.module.scss
@@ -19,5 +19,5 @@
 
 .rightPanel {
   flex: 1;
-  overflow: scroll;
+  overflow-y: auto;
 }
